-- Modelo relacional inicial para PostgreSQL 18.
-- Este archivo es inmutable después de aplicarse en un entorno compartido.

CREATE SCHEMA IF NOT EXISTS task_manager AUTHORIZATION CURRENT_USER;
COMMENT ON SCHEMA task_manager IS 'Dominio del gestor de tareas personales';

CREATE TABLE task_manager.categories (
    id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name            varchar(80) NOT NULL,
    created_at      timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at      timestamptz,
    CONSTRAINT ck_categories_name
        CHECK (char_length(btrim(name)) BETWEEN 1 AND 80),
    CONSTRAINT ck_categories_deleted_at
        CHECK (deleted_at IS NULL OR deleted_at >= created_at)
);

CREATE UNIQUE INDEX uq_categories_name_active_ci
    ON task_manager.categories (lower(btrim(name)))
    WHERE deleted_at IS NULL;

CREATE TABLE task_manager.tags (
    id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name            varchar(60) NOT NULL,
    created_at      timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at      timestamptz,
    CONSTRAINT ck_tags_name
        CHECK (char_length(btrim(name)) BETWEEN 1 AND 60),
    CONSTRAINT ck_tags_deleted_at
        CHECK (deleted_at IS NULL OR deleted_at >= created_at)
);

CREATE UNIQUE INDEX uq_tags_name_active_ci
    ON task_manager.tags (lower(btrim(name)))
    WHERE deleted_at IS NULL;

CREATE TABLE task_manager.tasks (
    id                      bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title                   varchar(160) NOT NULL,
    description             text,
    status                  varchar(16) NOT NULL DEFAULT 'INACTIVA',
    priority                varchar(8) NOT NULL DEFAULT 'MEDIA',
    category_id             bigint,
    parent_task_id          bigint,
    activated_at            timestamptz,
    completed_at            timestamptz,
    total_active_seconds    bigint NOT NULL DEFAULT 0,
    created_at              timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at              timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    deleted_at              timestamptz,
    version                 bigint NOT NULL DEFAULT 0,
    CONSTRAINT fk_tasks_category
        FOREIGN KEY (category_id)
        REFERENCES task_manager.categories (id)
        ON DELETE SET NULL,
    CONSTRAINT fk_tasks_parent
        FOREIGN KEY (parent_task_id)
        REFERENCES task_manager.tasks (id)
        ON DELETE RESTRICT,
    CONSTRAINT ck_tasks_title
        CHECK (char_length(btrim(title)) BETWEEN 1 AND 160),
    CONSTRAINT ck_tasks_description
        CHECK (description IS NULL OR char_length(description) <= 4000),
    CONSTRAINT ck_tasks_status
        CHECK (status IN ('INACTIVA', 'ACTIVA', 'TERMINADA')),
    CONSTRAINT ck_tasks_priority
        CHECK (priority IN ('ALTA', 'MEDIA', 'BAJA')),
    CONSTRAINT ck_tasks_total_active_seconds
        CHECK (total_active_seconds >= 0),
    CONSTRAINT ck_tasks_version
        CHECK (version >= 0),
    CONSTRAINT ck_tasks_not_own_parent
        CHECK (parent_task_id IS NULL OR parent_task_id <> id),
    CONSTRAINT ck_tasks_state_timestamps
        CHECK (
            (status = 'INACTIVA' AND activated_at IS NULL AND completed_at IS NULL)
            OR (status = 'ACTIVA' AND activated_at IS NOT NULL AND completed_at IS NULL)
            OR (status = 'TERMINADA' AND activated_at IS NULL AND completed_at IS NOT NULL)
        ),
    CONSTRAINT ck_tasks_timestamp_order
        CHECK (
            (activated_at IS NULL OR activated_at >= created_at)
            AND (completed_at IS NULL OR completed_at >= created_at)
            AND (deleted_at IS NULL OR deleted_at >= created_at)
        )
);

COMMENT ON COLUMN task_manager.tasks.activated_at IS
    'Inicio del segmento activo actual; debe ser NULL cuando la tarea no está ACTIVA';
COMMENT ON COLUMN task_manager.tasks.completed_at IS
    'Última finalización vigente; se limpia al reabrir la tarea';
COMMENT ON COLUMN task_manager.tasks.deleted_at IS
    'Borrado lógico: las vistas normales excluyen filas con valor no nulo';
COMMENT ON COLUMN task_manager.tasks.version IS
    'Versión para bloqueo optimista desde JPA';

CREATE INDEX ix_tasks_status_active
    ON task_manager.tasks (status)
    WHERE deleted_at IS NULL;
CREATE INDEX ix_tasks_priority_active
    ON task_manager.tasks (priority)
    WHERE deleted_at IS NULL;
CREATE INDEX ix_tasks_category_active
    ON task_manager.tasks (category_id)
    WHERE deleted_at IS NULL;
CREATE INDEX ix_tasks_parent_active
    ON task_manager.tasks (parent_task_id)
    WHERE deleted_at IS NULL AND parent_task_id IS NOT NULL;
CREATE INDEX ix_tasks_created_at_active
    ON task_manager.tasks (created_at DESC)
    WHERE deleted_at IS NULL;

CREATE TABLE task_manager.task_tags (
    task_id         bigint NOT NULL,
    tag_id          bigint NOT NULL,
    assigned_at     timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (task_id, tag_id),
    CONSTRAINT fk_task_tags_task
        FOREIGN KEY (task_id)
        REFERENCES task_manager.tasks (id)
        ON DELETE CASCADE,
    CONSTRAINT fk_task_tags_tag
        FOREIGN KEY (tag_id)
        REFERENCES task_manager.tags (id)
        ON DELETE CASCADE
);

CREATE INDEX ix_task_tags_tag ON task_manager.task_tags (tag_id);

CREATE TABLE task_manager.task_relations (
    id                  bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_task_id      bigint NOT NULL,
    target_task_id      bigint NOT NULL,
    relation_type       varchar(20) NOT NULL DEFAULT 'RELACIONADA',
    created_at          timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_task_relations_source
        FOREIGN KEY (source_task_id)
        REFERENCES task_manager.tasks (id)
        ON DELETE CASCADE,
    CONSTRAINT fk_task_relations_target
        FOREIGN KEY (target_task_id)
        REFERENCES task_manager.tasks (id)
        ON DELETE CASCADE,
    CONSTRAINT uq_task_relations
        UNIQUE (source_task_id, target_task_id, relation_type),
    CONSTRAINT ck_task_relations_distinct
        CHECK (source_task_id <> target_task_id),
    CONSTRAINT ck_task_relations_type
        CHECK (relation_type IN ('RELACIONADA', 'BLOQUEA', 'DEPENDE_DE'))
);

CREATE INDEX ix_task_relations_target
    ON task_manager.task_relations (target_task_id);

CREATE TABLE task_manager.task_status_history (
    id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    task_id         bigint NOT NULL,
    from_status     varchar(16),
    to_status       varchar(16) NOT NULL,
    change_reason   varchar(500),
    changed_at      timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_task_status_history_task
        FOREIGN KEY (task_id)
        REFERENCES task_manager.tasks (id)
        ON DELETE CASCADE,
    CONSTRAINT ck_task_status_history_from
        CHECK (from_status IS NULL OR from_status IN ('INACTIVA', 'ACTIVA', 'TERMINADA')),
    CONSTRAINT ck_task_status_history_to
        CHECK (to_status IN ('INACTIVA', 'ACTIVA', 'TERMINADA')),
    CONSTRAINT ck_task_status_history_change
        CHECK (from_status IS NULL OR from_status <> to_status)
);

CREATE INDEX ix_task_status_history_task_changed
    ON task_manager.task_status_history (task_id, changed_at DESC);

CREATE TABLE task_manager.task_time_entries (
    id              bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    task_id         bigint NOT NULL,
    started_at      timestamptz NOT NULL,
    ended_at        timestamptz,
    created_at      timestamptz NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_task_time_entries_task
        FOREIGN KEY (task_id)
        REFERENCES task_manager.tasks (id)
        ON DELETE CASCADE,
    CONSTRAINT ck_task_time_entries_range
        CHECK (ended_at IS NULL OR ended_at >= started_at)
);

CREATE UNIQUE INDEX uq_task_time_entries_open
    ON task_manager.task_time_entries (task_id)
    WHERE ended_at IS NULL;
CREATE INDEX ix_task_time_entries_task_started
    ON task_manager.task_time_entries (task_id, started_at DESC);

CREATE OR REPLACE FUNCTION task_manager.set_updated_at()
RETURNS trigger
LANGUAGE plpgsql
SET search_path = task_manager, pg_temp
AS $function$
BEGIN
    NEW.updated_at := CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$function$;

CREATE TRIGGER trg_categories_updated_at
BEFORE UPDATE ON task_manager.categories
FOR EACH ROW EXECUTE FUNCTION task_manager.set_updated_at();

CREATE TRIGGER trg_tags_updated_at
BEFORE UPDATE ON task_manager.tags
FOR EACH ROW EXECUTE FUNCTION task_manager.set_updated_at();

CREATE TRIGGER trg_tasks_updated_at
BEFORE UPDATE ON task_manager.tasks
FOR EACH ROW EXECUTE FUNCTION task_manager.set_updated_at();

CREATE OR REPLACE FUNCTION task_manager.prevent_task_parent_cycle()
RETURNS trigger
LANGUAGE plpgsql
SET search_path = task_manager, pg_temp
AS $function$
DECLARE
    cycle_found boolean;
BEGIN
    IF NEW.parent_task_id IS NULL THEN
        RETURN NEW;
    END IF;

    IF NEW.parent_task_id = NEW.id THEN
        RAISE EXCEPTION 'Una tarea no puede ser su propia tarea padre';
    END IF;

    WITH RECURSIVE ancestors AS (
        SELECT id, parent_task_id
        FROM task_manager.tasks
        WHERE id = NEW.parent_task_id

        UNION ALL

        SELECT task.id, task.parent_task_id
        FROM task_manager.tasks AS task
        JOIN ancestors ON task.id = ancestors.parent_task_id
    )
    SELECT EXISTS (
        SELECT 1 FROM ancestors WHERE id = NEW.id
    ) INTO cycle_found;

    IF cycle_found THEN
        RAISE EXCEPTION 'La jerarquía de subtareas produciría un ciclo';
    END IF;

    RETURN NEW;
END;
$function$;

CREATE TRIGGER trg_tasks_prevent_parent_cycle
BEFORE INSERT OR UPDATE OF parent_task_id ON task_manager.tasks
FOR EACH ROW EXECUTE FUNCTION task_manager.prevent_task_parent_cycle();

CREATE OR REPLACE FUNCTION task_manager.log_task_status_change()
RETURNS trigger
LANGUAGE plpgsql
SET search_path = task_manager, pg_temp
AS $function$
BEGIN
    IF TG_OP = 'INSERT' THEN
        INSERT INTO task_manager.task_status_history (task_id, from_status, to_status)
        VALUES (NEW.id, NULL, NEW.status);
    ELSIF NEW.status IS DISTINCT FROM OLD.status THEN
        INSERT INTO task_manager.task_status_history (task_id, from_status, to_status)
        VALUES (NEW.id, OLD.status, NEW.status);
    END IF;

    RETURN NEW;
END;
$function$;

CREATE TRIGGER trg_tasks_status_history
AFTER INSERT OR UPDATE OF status ON task_manager.tasks
FOR EACH ROW EXECUTE FUNCTION task_manager.log_task_status_change();
